html escape brackets

--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -36,7 +36,7 @@
 </div>
 
 <div class="method">
-  <strong>GET /sites/<id>.json</strong>
+  <strong>GET /sites/&lt;id&gt;.json</strong>
   <pre>curl -X GET aquaduct.herokuapp.com/sites/490.json</pre>
   <p>Get the list of samples for the given site</p>
   <pre class="prettyprint"><code>{
