--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,14 @@
   <%= yield %>
   <hr />
   <footer>
-    <a href="mailto:michael@jackpine.me">contact me</a> with questions or leads on LADWP data feeds. <a href="https://twitter.com/#!/search/?q=%23opendata">#opendata</a>
+    <a href="mailto:info@jackpine.me">contact us</a> | 
+    <a href="https://twitter.com/jackpinescience">@jackpinescience</a>
+    <span style="float: right">
+      <a href="http://jackpine.me">
+        <img class='jackpine-logo' src="/assets/pine_cone.png">
+      </a>
+      a <a href="http://jackpine.me">jackpine</a> product 
+    </span>
   </footer>
 </div>
 </body>
