copy changes to homepage

--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,13 +1,13 @@
 <h1>Thirsty, Los Angeles?</h1>
 <p id="intro">
-  This is an API around some realtime <a href="www.ladwp.com">LADWP</a> measurements.
-  It was harvested by dubious means, and the data set isn't very clean.
+  This is an API around some realtime <a href="www.ladwp.com">LADWP</a> water sensors in the Owens Valley.
   There are <%=  link_to 'some plots', sites_path %> so you can get an idea of the available data.
+  It was harvested by dubious means, and the data set isn't very clean.
 </p>
 
 <p>
   Do you have access to more LADWP data? I'd love to compile it here.
-  Please <a href="twitter.com/ikawe">let me know</a>!
+  Please <a href="twitter.com/jackpinescience">let me know</a>!
 </p>
   
 
