site index doesn't show charts

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,8 @@
       <a class="brand" href="/">Thirsty</a>
       <div class="nav-collapse">
         <ul class="nav">
-          <li><a href="/sites">Examples</a></li>
+          <li><a href="/sites">Sites</a></li>
+          <li><a href="/sites/332625">Examples</a></li>
           <li><a href="mailto:michael@jackpine.me">Contact</a></li>
         </ul>
       </div><!--/.nav-collapse -->
