--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -1,107 +1,20 @@
-<script>
-  function draw_site(site) {
-    "use strict";
-    var data = site.samples;
-
-    var margin = 60,
-      width = 700 - margin,
-      height = 500 - margin;
-
-
-    d3.select(".plot").
-      append("h2").
-      append("a").
-        attr("href", "/sites/" + site.id).
-        text(site.site_name + " : " + site.measurement_type);
-
-    var plot = d3.select(".plot").
-      append("svg");
-
-    plot.
-      attr("width", width).
-      attr("height", height).
-      append("g").
-      attr("class", "chart");
-
-    plot.
-      selectAll("circle").
-      data(data).
-      enter().
-      append("circle").
-        attr("class", function(sample) { return sample.value == 0 ? "zero" : "non-zero" });
-
-    var non_zero_value_samples =  _.reject(data, function(sample) { return sample.value == 0 });
-    var value_extent = d3.extent(
-      non_zero_value_samples,
-      function(sample) { return sample.value; }
-    );
-
-    var value_scale = d3.scale.linear().
-      domain(value_extent).
-      range([height, margin]);
-
-    var time_extent = d3.extent(
-      data,
-      function(sample) { return Date.parse(sample.sampled_at); }
-    );
-
-    var time_scale = d3.time.scale().
-      domain(time_extent).
-      range([margin, width]);
-
-    plot.selectAll("circle").
-      attr("cx", function(sample) { return time_scale(Date.parse(sample.sampled_at)); }).
-      attr("cy", function(sample) { return sample.value == 0.0 ? height : value_scale(sample.value); }).
-      attr("r", 3);
-
-    var time_axis = d3.svg.axis().
-      scale(time_scale);
-
-    plot.
-      append('g').
-      attr("class", "x axis").
-      attr("transform", "translate(0, " + height + ")").
-      call(time_axis);
-
-    var value_axis = d3.svg.axis().
-      scale(value_scale).
-      orient("left");
-
-    plot.
-      append('g').
-      attr("class", "y axis").
-      attr("transform", "translate(" + margin + ")").
-      call(value_axis);
-
-  }
-
-  d3.json("/sites.json", function(sites) {
-    _.each(sites, function(site) {
-      d3.json("/sites/" + site.id + ".json", draw_site);
-    });
-  });
-</script>
-<style type="text/css">
-  svg {
-    padding-bottom: 50px;
-  }
-  .axis path, .tick {
-    fill: none;
-    stroke: black;
-  }
-  .axis {
-    font-size: 8pt;
-    font-family: sans-serif;
-  }
-  circle {
-    stroke: black;
-    stroke-width: 0.5px;
-    fill: RoyalBlue;
-    opacity: 0.6;
-  }
-  circle.zero {
-    fill: Red;
-  }
-</style>
-<div class='plot'>
-</div>
+<table class='sensors'>
+  <tr>
+    <th>Type</th>
+    <th>Site</th>
+    <th>Format</th>
+  </tr>
+  <% @sites.each do |site| %>
+    <tr>
+      <td>
+        <%= site.measurement_type %>
+      </td>
+      <td>
+        <%= site.site_name %> 
+      </td>
+      <td>
+        [ <%= link_to 'plot', site %>, <%= link_to 'json', site_path(site, :format => :json) %> ]
+      </td>
+    </tr>
+  <% end %>
+</table>
