--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -20,7 +20,7 @@
 <h2>Api</h2>
 <div class="method">
   <strong>GET /sites.json</strong>
-  <pre>curl -X GET aquaduct.herokuapp.com/sites.json</pre>
+  <pre>curl -X GET api.thirsty.la/sites.json</pre>
   <p>Get list of available sites</p>
   <pre class="prettyprint"><code>[
     {
@@ -43,7 +43,7 @@
 
 <div class="method">
   <strong>GET /sites/&lt;id&gt;.json</strong>
-  <pre>curl -X GET aquaduct.herokuapp.com/sites/490.json</pre>
+  <pre>curl -X GET api.thirsty.la/sites/490.json</pre>
   <p>Get the list of samples for the given site</p>
   <pre class="prettyprint"><code>{
     "created_at": "2012-08-13T14:09:41-07:00", 
