jp branding card

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,15 +29,18 @@
 </div>
 <div class="container">
   <%= yield %>
-  <hr />
   <footer>
-    <a href="mailto:info@jackpine.me">contact us</a> | 
-    <a href="https://twitter.com/jackpinescience">@jackpinescience</a>
-    <span style="float: right">
+    <span id="calling-card">
       <a href="http://jackpine.me">
         <img class='jackpine-logo' src="/assets/pine_cone.png">
       </a>
-      a <a href="http://jackpine.me">jackpine</a> product 
+      <div class="brand">
+        a <a href="http://jackpine.me">jackpine</a> product
+      </div>
+      <div class="contact">
+        <a href="mailto:info@jackpine.me">contact us</a> |
+        <a href="//twitter.com/jackpinescience">@jackpinescience</a>
+      </span>
     </span>
   </footer>
 </div>
