--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -20,7 +20,8 @@
 
 <p>
   Do you have access to more LADWP data? I'd love to compile it here.
-  Please <a href="//twitter.com/jackpinescience">let me know</a>!
+  Are you interested in more <a href=//twitter.com/#!/search/%23opendata">#opendata</a> in Los Angeles?
+  Please <a href="//twitter.com/jackpinescience">let us know</a>!
 </p>
 
 <h2>Api</h2>
