--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -31,15 +31,39 @@ body {
 // Example:
 // @linkColor: #ff0000;
 
-.container {
-  width: 700px;
-}
-
-.jackpine-logo {
-  margin-bottom: 15px;
-}
-
 table td {
   padding-right: 10px;
   padding-left: 10px;
 }
+
+.container {
+  width: 700px;
+}
+
+footer {
+  border-top: solid #f0f0f0 1px;
+  height: 100px;
+  padding-top: 5px;
+}
+
+#calling-card {
+  float: right;
+  font-size: 14px;
+  line-height: 24px;
+}
+
+#calling-card .jackpine-logo {
+  float: right;
+  margin-right: 17px;
+  width: 44px;
+  height: 34px;
+}
+
+#calling-card .brand {
+  margin-top: 7px;
+}
+
+#calling-card .contact {
+  clear: right;
+}
+
