min height for main content prevents aggregious reflow

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -40,6 +40,10 @@ table td {
   width: 700px;
 }
 
+#main {
+  min-height: 400px;
+}
+
 footer {
   border-top: solid #f0f0f0 1px;
   height: 100px;
