--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,9 @@
   </div>
 </div>
 <div class="container">
-  <%= yield %>
+  <div id="main">
+    <%= yield %>
+  </div>
   <footer>
     <span id="calling-card">
       <a href="http://jackpine.me">
