--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,26 +7,28 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<div class="navbar navbar-fixed-top">
-  <div class="navbar-inner">
-    <div class="container">
-      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-      </a>
-      <a class="brand" href="/">Thirsty</a>
-      <div class="nav-collapse">
-        <ul class="nav">
-          <li><a href="/sites">Sites</a></li>
-          <li><a href="/sites/332625">Examples</a></li>
-          <li><a href="mailto:michael@jackpine.me">Contact</a></li>
-        </ul>
-      </div><!--/.nav-collapse -->
+      </button>
+      <a class="navbar-brand" href="/">Thirsty</a>
     </div>
+
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><a href="/sites">Sites</a></li>
+        <li><a href="/sites/332625">Examples</a></li>
+        <li><a href="mailto:michael@jackpine.me">Contact</a></li>
+      </ul>
+    </div><!--/.nav-collapse -->
   </div>
-</div>
+</nav>
+
 <div class="container">
   <div id="main">
     <%= yield %>
