learnt how to spellgood

--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -2,7 +2,7 @@
 <p id="intro">
   This is an API around some realtime <a href="//www.ladwp.com">LADWP</a> water
   sensors in the Owens Valley, including the 
-  <a href="http://en.wikipedia.org/wiki/Los_Angeles_Aqueduct">Los Angeles Aquaduct</a>.
+  <a href="http://en.wikipedia.org/wiki/Los_Angeles_Aqueduct">Los Angeles Aqueduct</a>.
 </p>
 
 <p>
